MyPlugin/src/com/kplugin/K.bnf
{
  parserClass="com.kplugin.parser.KParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="K"
  psiImplClassSuffix="Impl"
  psiPackage="com.kplugin.psi"
  psiImplPackage="com.kplugin.psi.impl"

  elementTypeHolderClass="com.kplugin.psi.KTypes"
  elementTypeClass="com.kplugin.psi.KElementType"
  tokenTypeClass="com.kplugin.psi.KTokenType"
}


kFile ::= header_block module_definition+

header_block ::= header_line*

header_line ::= REQUIRE CRLF+

private module_definition ::= module_start module_body module_end

module_start ::= WS* MODULE WS+ MODULE_NAME WS* CRLF*

module_body ::= (imports_block CRLF* syntax_block CRLF*) | (imports_block CRLF* rule_block CRLF*)

module_end ::= ENDMODULE CRLF*

imports_block ::= imports_line*

syntax_block ::= statement+

statement ::= SYNTAX WS+ TYPE WS+ ASSIGN WS+ expression_block

expression_block ::= (WS* expression_ WS* list_options? CRLF* WS* OR_SIGN?)+
expression_ ::= TYPE
                | (SIGN TYPE SIGN)
                | (TYPE OPERATION TYPE)

list_options ::= OPTION

rule_block ::= RULE

imports_line ::= WS* IMPORTS WS+ MODULE_NAME WS* CRLF*

item_ ::= (property|COMMENT|CRLF)

property ::= (KEY? SEPARATOR VALUE?) | KEY
